metadata/objects/KCSArticle_DataCategorySelection__c.object
<CustomObject>
    <fields>
        <fullName>DataCategoryGroupName__c</fullName>
        <label>DataCategoryGroupName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataCategoryName__c</fullName>
        <label>DataCategoryName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>Parent ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>KCSArticle_DataCategorySelection__c</label>
    <nameField>
        <label>KCSArticle_DataCategorySelection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KCSArticle_DataCategorySelection__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>